# tracing-perfetto-sdk

./: Cargo.toml
crates/layer/: Cargo.toml
crates/layer/src/: debug_annotations.rs  sdk_layer.rs
crates/sys/src/: lib.rs  perfetto-bindings.cc  perfetto-bindings.h
