[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"

[workspace.dependencies]
tracing-perfetto-sdk-layer = { version = "0.12.0", path = "crates/layer" }
tracing-perfetto-sdk-schema = { version = "0.12.0", path = "crates/schema" }
tracing-perfetto-sdk-sys = { version = "0.12.0", path = "crates/sys" }

anyhow = "1.0"
bytes = "1"
cxx = { version = "1.0", features = ["c++17"] }
cxx-build = { version = "1.0", features = ["parallel"] }
dashmap = "6.1"
futures = "0.3"
nix =  "0.29"
os-id = "3.1"
pbjson = "0.7"
pbjson-build = "0.7"
pbjson-types = "0.7"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
serde = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
thread_local = "1.1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
